--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
                 <ul class="menu__lista">
                     <li class="menu__item">
-                        <a class="menu__link ativo" href="#"><i class="fas fa-home"></i>Início</a>
-                        <a class="menu__link" href="#"><i class="fas fa-mobile-alt"></i>Aplicativos</a>
-                        <a class="menu__link" href="#"><i class="fas fa-gamepad"></i>Jogos</a>
+                        <a class="menu__link ativo" href="#"><i class="menu__icone fas fa-home"></i>Início</a>
+                        <a class="menu__link" href="#"><i class="menu__icone fas fa-mobile-alt"></i>Aplicativos</a>
+                        <a class="menu__link" href="#"><i class="menu__icone fas fa-gamepad"></i>Jogos</a>
                     </li>
                 </ul>
 
@@ -73,19 +73,19 @@
 
                         <li class="destaques__categorias___item">
                             <a class="destaques__categorias___link" href="#">
-                                <i class="fas fa-list-ol"></i>Jogos populares
+                                <i class="destaques__categorias___icone fas fa-list-ol"></i>Jogos populares
                             </a>
                         </li>
 
                         <li class="destaques__categorias___item">
                             <a class="destaques__categorias___link" href="#">
-                                <i class="far fa-star"></i>Em Destaque
+                                <i class="destaques__categorias___icone far fa-star"></i>Em Destaque
                             </a>
                         </li>
 
                         <li class="destaques__categorias___item">
                             <a class="destaques__categorias___link" href="#">
-                                <i class="far fa-bell"></i>Lançamentos
+                                <i class="destaques__categorias___icone far fa-bell"></i>Lançamentos
                             </a>
                         </li>
 
@@ -445,6 +445,8 @@
         </main>
 
         <footer  class="rodape">Todos os direitos reservados &copy;2021</footer>
+
+	<script src="./js/fontawesome.all.min.js"></script>
 
     </body>
 
